--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
 	text-align: center;
 	margin-top: 50px;
-	background: #50D0A0;
+	background: #000000;
 }
 
 input[type=range]{
@@ -22,7 +22,7 @@ input[type=range]::-webkit-slider-thumb {
 	height: 32px;
 	width: 32px;
 	border-radius: 50%;
-	background: goldenrod;
+	background: grey;
 	margin-top: -12px;
 }
 
